	- [roms] $1593: previous bug fixed again for _all_ calcs
	- [roms] $1597: set link timeout to 60s for non-NT platforms, 1.5s for others
	- [roms] $1598: added a new function in the ticables library API (ticable_link_reset)
		for use by TiEmu. It allows to reset/flush the pipes of virtual linking when the
		DBus is reset (usually due to transmission error). Link is now resumable.
	//- [roms] $1601: reimplemented HW3 RTC from latest/new O. Armand's information.

- 25/06/2005, version 2.00-rc6:
	- [roms] $1552: replaced my hand-made about box by the generic one provided with GTK 2.6
	- [roms] $1560: TiEMu can be exited from the cross (WM)
	- [roms] $1564: fixed 'backing pixmap problem' (bug #1227433): the scale factor
		was not retrieved fine from .ini file when the ratio contains ',' instead of '.'
	- [kevin] $1572/1573: handle program entry breakpoints on _main for kernel/Fargo programs
	- [kevin] $1574/1575: implemented HW3 RTC
	- [roms]  $1577: can choose HW1/HW2 when importing a tib file
	- [kevin] $1580/1581: fixed about box license display on MinGW

- 23/06/2005, version 2.00-rc5:
	- [roms] $1525: merged Kevin's change in rev $1524 (recfile).
	- [roms] $1542: merged Kevin's UAE upgrade.
	- [roms] $1543: fixed 'Receive file' check item.
	- [roms] $1544: fixed bug #1227179 (screenshot).

- 10/06/2005, version 2.00-rc4:
	- [roms] $1488: replaced current icon by Jaime's one
	- [roms] $1489: removed logo from about box
	- [jb]   $1493: src/gui/calc.c: screenshot of the whole calc in BW
		is not supported, error out in this case. It'd be nice to pop an
		error message to the user.
	- [jb]   $1493: src/misc/screenshot.c: enable BW screenshot in EPS
		and PDF; they're treated like color screenshots.
	- [roms] $1497: added hibou's logo
	- [roms] $1507: cleanup and little fixes in interrupt support of m68k
	- [roms] $1509: fixed behaviour of all keys and definitely fixed ON key

- 01/06/2005, version 2.00-rc3:
	- [roms] $1462: fixed bug #1212619.